# open-vds-sandbox

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  DESCRIPTION.md  README.md  VERSION  pyproject.toml  setup.py
examples/: CMakeLists.txt
examples/Benchmark/: Readme.md  benchmark.py  requirements.txt
examples/BenchmarkCpp/: CMakeLists.txt  README.md  benchmark-cpp.cpp  running-stats.hpp
examples/Corners/: corners.py
examples/GettingStarted/: main.py
examples/JupyterNotebook/: OpenVDS_basic_usage.ipynb
examples/NpzToVds/: npz_to_vds.py
examples/SliceDump/: CMakeLists.txt  GenerateVDS.h  main.cpp
examples/VDSThumbnailer/: CMakeLists.txt  README.md  VolumeDataStore-Mime-vds.xml  bwrap-cmd.sh  colorbar.hpp  debug-thumbnailer.sh  gnome-thumbnail.md  install-to-local.sh  running_stat.hpp  vds-thumbnailer.cpp  vds.thumbnailer
examples/VDSThumbnailer/Windows/: Dll.cpp  README.md  ThumbnailProvider.cpp
java/: CMakeLists.txt  README.md
java/cpp/: AzureVdsGenerator.cpp  CoordinateTransformer.cpp  Exceptions.cpp  GlobalMetadataCommon.cpp  GlobalState.cpp  IJKCoordinateTransformer.cpp  InMemoryVDSGenerator.cpp  KnownMetadata.cpp  Marshaling.cpp  Marshaling.h  MetadataAccess.cpp  MetadataContainer.cpp  MetadataKey.cpp  NDVector.h  OpenVDS.cpp  Optional.cpp  Range.cpp  VDSWriteData.cpp  ValueConversion.cpp  VolumeData.cpp  VolumeDataAccess.cpp  VolumeDataAccessManager.cpp  VolumeDataAxisDescriptor.cpp  VolumeDataChannelDescriptor.cpp  VolumeDataLayout.cpp  VolumeDataLayoutDescriptor.cpp  VolumeIndexer.cpp  VolumeSampler.cpp  openvds_export.cpp
java/cpp/OpenVDSJava/: .gitignore  OpenVDSJava.vcxproj  OpenVDSJava.vcxproj.filters
java/cpp/VS2019/: OpenVDSJava.sln  OpenVDSJava.vcxproj  OpenVDSJava.vcxproj.filters
java/cpp/include/: CommonJni.h
java/cpp/src/: AzureVdsGenerator.cpp  CPPJNI.cpp  CPPJNI.h  CPPJNICommon.cpp  CPPJNICommon.h  CoordinateTransformer.cpp  Error.cpp  Exceptions.cpp  GlobalMetadataCommon.cpp  GlobalState.cpp  IJKCoordinateTransformer.cpp  InMemoryVDSGenerator.cpp  KnownMetadata.cpp  Log.cpp  Marshaling.cpp  Marshaling.h  MemoryVdsGenerator.cpp  MetadataAccess.cpp  MetadataContainer.cpp  MetadataKey.cpp  OpenVDS.cpp  OpenVDSJava.cpp  Optional.cpp  VDSWriteData.cpp  ValueConversion.cpp  VdsError.cpp  VolumeData.cpp  VolumeDataAccess.cpp  VolumeDataAccessManager.cpp  VolumeDataAxisDescriptor.cpp  VolumeDataChannelDescriptor.cpp  VolumeDataLayout.cpp  VolumeDataLayoutDescriptor.cpp  VolumeDataPage.cpp  VolumeDataPageAccessor.cpp  VolumeIndexer2D.cpp  VolumeIndexer3D.cpp  VolumeIndexer4D.cpp  VolumeIndexer5D.cpp  VolumeIndexer6D.cpp  (+3 more)
java/java/demo/: AWSSliceDumpDemo.java  CreateVDS.java  CreateVDSSliceLODOnCloud.java  CreateVDSSliceMultiLayoutLODOnCloud.java  CreateVDSSliceNoLOD.java  CreateVDSSliceWithLOD.java  CreateVDSWithLOD.java  CreateVDSWithLODMultipleLayout.java  OpenVDSDemo.java  OpenVdsDemo.java  SliceDump.java  WriteDataDemo.java
java/tools/: check-templates.py  javagen.py  make-range-classes.py  make-vector-classes.py  parse_cpp_header.py
python/openvds/: CMakeLists.txt  PyCoordinateTransformer.cpp  PyCoordinateTransformer.h  PyError.cpp  PyError.h  PyExceptions.cpp  PyExceptions.h  PyGlobal.cpp  PyGlobal.h  PyGlobalState.cpp  PyIJKCoordinateTransformer.cpp  PyIJKCoordinateTransformer.h  PyKnownMetadata.cpp  PyLog.cpp  PyLog.h  PyMetadataAccess.cpp  PyMetadataContainer.cpp  PyVolumeData.cpp  PyVolumeDataAccess.cpp  PyVolumeDataAccessManager.cpp  PyVolumeDataAxisDescriptor.cpp  PyVolumeDataChannelDescriptor.cpp  PyVolumeDataLayout.cpp  PyVolumeDataLayoutDescriptor.cpp  __init__.py.in  api.py  core.cpp  generated_docstrings.h  volumedataaccess.py
src/OpenVDS/: CMakeLists.txt  OpenVDS.cpp  json_cpp_include.h
src/OpenVDS/IO/: ErrorRequest.h  (+38 more)
tests/: CMakeLists.txt  LinuxLinkerChainHack.cpp
tests/OpenVDS/: DataAccess.cpp  DataAccessorClone.cpp  GlobalStateTest.cpp  IJKCoordinateTransformerTest.cpp  MetadataEnableWriting.cpp  MultiComponent.cpp  MultiThreadedRequests.cpp  OpenVDSIntegrationTest.cpp  ReadOnly.cpp  ReadWritePage.cpp  RequestCancellation.cpp  RequestVolumeError.cpp  RequestVolumeSamples.cpp  RequestVolumeSubsetAndPageAccessor.cpp  RequestVolumeSubsetFormat.cpp  RequestVolumeTraces.cpp  VolumeDataPageAccessorGetChunkVolumeDataHash.cpp  WaitForCompletion.cpp
tests/SEG-Y/: SEGYScanTest.cpp
tests/VDS/: DeserializeVolumeDataTest.cpp  LoggingTests.cpp  ParseConnectionStringTest.cpp  ParseVDSJsonTest.cpp  RequestVolumeCleanupThread.cpp  chunk.CompressionMethod_WaveletLossless_1_6  chunk.CompressionMethod_Wavelet_1_6  chunk.Dimensions_012LOD0_0_CompressionMethod_None_no_value  chunk.Dimensions_012LOD0_0_CompressionMethod_WaveletLossless_no_value  chunk.Dimensions_012LOD0_19_CompressionMethod_None_no_value  chunk.Dimensions_012LOD0_19_CompressionMethod_WaveletLossless_no_value  chunk.U16.CompressionMethod_WaveletLossless_1_6  chunk.U16.CompressionMethod_Wavelet_1_6  chunk.U8.CompressionMethod_WaveletLossless_1_6  chunk.U8.CompressionMethod_Wavelet_1_6
tests/benchmark/: CMakeLists.txt  simple_benchmark.cpp
tests/fmt/: basic_fmt.cpp
tests/io/: InMemoryIo.cpp  IoErrorHandling.cpp  IoManagerBasic.cpp  IoManagerProtocol.cpp  IoPerformance.cpp  IoVDSRoundtrip.cpp  filetest.cpp  sdpath.cpp
tests/java/: CMakeLists.txt
tests/python/: CMakeLists.txt  CreateVds.py  VolumeDataAccessor.py  example_vs_launch_pytests.txt  pytest.ini.in
tests/utils/: FacadeIOManager.h  GenerateVDS.h  SlowIOManager.h
tools/: CMakeLists.txt
tools/HueBDS/: CMakeLists.txt  Commands.cpp  Commands.h  ParserHelper.cpp  ParserHelper.h  Util.cpp  Util.h  huebds.cpp  huebds_exports.h
tools/SEGYExport/: README.md  SEGYExport.cpp
tools/SEGYImport/: CMakeLists.txt  README.md  SEGYImport.cpp  SplitUrl.h  TraceInfo2DManager.cpp  TraceInfo2DManager.h
tools/ScratchVDSFileCreate/: CMakeLists.txt  VDSFileCreate.cpp
tools/Shared/: CMakeLists.txt  HelpConnection.cpp  HelpConnection.h  PrintHelpers.h
tools/VDSCopy/: CMakeLists.txt  README.md  VDSCopy.cpp
tools/VDSInfo/: CMakeLists.txt  README.md  VDSInfo.cpp
(+579 files in other folders)
